force-app/main/default/objects/Discount_Code__mdt/Discount_Code__mdt.object-meta.xml
<CustomObject>
    <description>Stores the discount codes available on the EComm Site and their associated discount values</description>
    <label>Discount Code</label>
    <pluralLabel>Discount Codes</pluralLabel>
</CustomObject>