force-app/main/default/objects/Discount_Code__mdt/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Total Dollar Amount to be discounted for this code.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>