force-app/main/default/objects/Discount_Code__mdt/fields/Applicable_Bundles__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Bundles__c</fullName>
    <description>Comma separated list of the product codes for bundles that this discount code may be applied to.  If populated, this will ONLY be used for the specified bundles.</description>
    <label>Applicable Bundles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>