force-app/main/default/objects/Discount_Code__mdt/fields/Applicable_Product_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Product_Types__c</fullName>
    <label>Applicable Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biobanking</fullName>
            </value>
            <value>
                <fullName>Genomics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>