force-app/main/default/objects/Discount_Code__mdt/fields/Applicable_Storage_Length__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Storage_Length__c</fullName>
    <description>If populated, restricts this discount code to the storage length specified.</description>
    <label>Applicable Storage Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20YPP</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>