force-app/main/default/objects/Discount_Code__mdt/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last day that this code is valid.</description>
    <inlineHelpText>Last day that this code is valid.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>