force-app/main/default/objects/Discount_Code__mdt/fields/Price_Limit__c.field-meta.xml
<CustomField>
    <fullName>Price_Limit__c</fullName>
    <description>The minimum cart amount at which this discount code can be applied.</description>
    <inlineHelpText>The minimum cart amount at which this discount code can be applied.</inlineHelpText>
    <label>Price Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>