force-app/main/default/objects/Discount_Code__mdt/fields/Services_Count__c.field-meta.xml
<CustomField>
    <fullName>Services_Count__c</fullName>
    <description>For the temporary mutli-biobanking discount: How many biobanking services should be in the order in order to apply this discount?</description>
    <label>Services Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>