force-app/main/default/objects/Discount_Code__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date upon which this code becomes valid.</description>
    <inlineHelpText>Date upon which this code becomes valid.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>